--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
   <head>
     <meta charset="utf-8" />
-    <title>Gestos Sonoros</title>
+    <title>Interface</title>
 
     <!-- p5 core -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.min.js"></script>
@@ -12,10 +12,7 @@
   </head>
 
   <body>
-    <p>
-      Move o rato e clica para explorar o sistema sonoro.
-    </p>
-
-    <script src="sketch.js"></script>
+      <script src="sketch.js"></script>
   </body>
 </html>
+
