--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
+    <style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background: transparent;
+  }
+  canvas { display: block; }
+</style>
+
     <meta charset="utf-8" />
     <title>Interface</title>
 
@@ -12,6 +22,8 @@
   </head>
 
   <body>
-      <script src="sketch.js"></script>
+  <div id="sketch-holder"></div>
+  <script src="sketch.js"></script>
   </body>
 </html>
+
