--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
-    <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background: transparent;
-  }
-  canvas { display: block; }
-</style>
-
     <meta charset="utf-8" />
     <title>Interface</title>
 
-    <!-- p5 core -->
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.min.js"></script>
+    <style>
+      html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background: transparent;
+      }
+      #sketch-holder {
+        width: 100%;
+        height: 100%;
+      }
+      canvas { display: block; }
+    </style>
 
-    <!-- p5 sound -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/addons/p5.sound.min.js"></script>
   </head>
 
   <body>
-  <div id="sketch-holder"></div>
-  <script src="sketch.js"></script>
+    <div id="sketch-holder"></div>
+    <script src="sketch.js"></script>
   </body>
 </html>
-
